--- a/SportsSideKick/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_forgot_password.xml
@@ -34,31 +34,29 @@
 
                 <TextView
                     android:id="@+id/forgot_password_reset_text"
-                    android:layout_centerHorizontal="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
                     android:text="@string/forgot_password_text"
                     android:textAlignment="center"
-                    android:textColor="@android:color/white"
-                    android:textSize="12sp" />
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/font_size_12" />
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginRight="@dimen/half_margin"
+                    android:layout_height="@dimen/height_1"
                     android:layout_centerVertical="true"
-                    android:background="@android:color/white"
+                    android:layout_marginEnd="@dimen/half_margin"
                     android:layout_toStartOf="@id/forgot_password_reset_text"
-                    />
+                    android:background="@android:color/white" />
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="@dimen/height_1"
                     android:layout_centerVertical="true"
-                    android:background="@android:color/white"
-                    android:layout_marginLeft="@dimen/half_margin"
+                    android:layout_marginStart="@dimen/half_margin"
                     android:layout_toEndOf="@id/forgot_password_reset_text"
-                    />
+                    android:background="@android:color/white" />
             </RelativeLayout>
 
 
@@ -73,11 +71,11 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:layout_marginBottom="@dimen/margin_5"
                 android:layout_marginLeft="@dimen/margin_5"
                 android:layout_marginRight="@dimen/margin_5"
-                android:layout_marginTop="@dimen/margin_10">
+                android:layout_marginTop="@dimen/margin_10"
+                android:gravity="center">
 
                 <Button
                     android:id="@+id/forgot_password_resert_button"
@@ -90,10 +88,10 @@
                     android:id="@+id/forgot_password_progress_bar"
                     android:layout_width="@dimen/prodgres_bar"
                     android:layout_height="@dimen/prodgres_bar"
-                    android:elevation="2dp"
-                    app:indicatorName="LineSpinFadeLoaderIndicator"
                     android:layout_centerInParent="true"
-                    android:visibility="gone"/>
+                    android:elevation="@dimen/elevation_2"
+                    android:visibility="gone"
+                    app:indicatorName="LineSpinFadeLoaderIndicator" />
 
             </RelativeLayout>
 
