--- a/SportsSideKick/app/src/main/res/layout/user_stats_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/user_stats_item.xml
@@ -8,23 +8,23 @@
         android:id="@+id/caption"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
+        android:layout_margin="@dimen/margin_10"
         android:layout_weight="1"
         android:ellipsize="end"
-        android:gravity="right"
+        android:gravity="end"
         android:lines="1"
-        android:text="Caption"
+        android:text="@string/caption_low"
         android:textColor="@color/white" />
 
     <TextView
         android:id="@+id/value"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="@dimen/margin_15"
         android:layout_weight="3"
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:lines="1"
-        android:text="Value"
+        android:text="@string/value"
         android:textColor="@color/colorAccent" />
 </LinearLayout>
