--- a/SportsSideKick/app/src/main/res/layout/activity_splash.xml
+++ b/SportsSideKick/app/src/main/res/layout/activity_splash.xml
@@ -21,7 +21,7 @@
         android:layout_width="@dimen/progress_bar_width"
         android:layout_height="@dimen/progress_bar_height"
         android:layout_centerInParent="true"
-        android:elevation="2dp"
+        android:elevation="@dimen/elevation_2"
         android:visibility="gone"
         app:indicatorName="LineSpinFadeLoaderIndicator" />
 </RelativeLayout>
