--- a/SportsSideKick/app/src/main/res/layout/add_chat_button.xml
+++ b/SportsSideKick/app/src/main/res/layout/add_chat_button.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="60dp"
-    android:layout_height="60dp"
+    android:layout_width="@dimen/width_60"
+    android:layout_height="@dimen/height_60"
     android:layout_gravity="center">
 
     <ImageView
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_margin="10dp"
+        android:layout_margin="@dimen/margin_10"
         android:background="@null"
         android:scaleType="centerInside"
         android:src="@drawable/chat_add_user"
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/image"
         android:gravity="center"
-        android:text="ADD NEW CHAT"
+        android:text="@string/add_new_chat"
         android:textColor="@color/white"
         android:visibility="gone"/>
 </RelativeLayout>
