--- a/SportsSideKick/app/src/main/res/layout/chat_member_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/chat_member_item.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="80dp"
+    android:layout_width="@dimen/width_80"
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="@dimen/width_60"
+        android:layout_height="@dimen/height_60"
         android:layout_centerHorizontal="true"
         android:scaleType="centerCrop" />
 
     <ImageView
         android:id="@+id/remove_icon"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="@dimen/width_20"
+        android:layout_height="@dimen/height_20"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:scaleType="centerCrop"
@@ -26,13 +26,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/image"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginBottom="@dimen/margin_5"
+        android:layout_marginTop="@dimen/margin_5"
         android:gravity="center"
         android:maxLines="2"
-        android:text="Demo caption Demo caption Demo caption Demo caption"
+        android:text="@string/demo_caption"
         android:textColor="@color/white"
-        android:textSize="9sp" />
+        android:textSize="@dimen/font_size_9" />
 
 
 </RelativeLayout>
