--- a/SportsSideKick/app/src/main/res/layout/chat_public_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/chat_public_item.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="60dp"
+    android:layout_width="@dimen/width_60"
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="@dimen/width_60"
+        android:layout_height="@dimen/height_60"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/blank_profile_rounded"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:src="@drawable/blank_profile_rounded" />
 
     <ImageView
         android:id="@+id/selected"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="@dimen/width_60"
+        android:layout_height="@dimen/height_60"
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
         android:scaleType="centerCrop"
@@ -27,18 +26,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/image"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginBottom="@dimen/margin_5"
+        android:layout_marginTop="@dimen/margin_5"
         android:gravity="center"
         android:maxLines="2"
-        android:text="Demo caption Demo caption Demo caption Demo caption"
+        android:text="@string/demo_caption"
         android:textColor="@color/white"
-        android:textSize="9sp" />
+        android:textSize="@dimen/font_size_9" />
 
     <ImageView
         android:id="@+id/people_icon"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
+        android:layout_width="@dimen/width_15"
+        android:layout_height="@dimen/height_15"
         android:layout_below="@+id/caption"
         android:layout_centerHorizontal="true"
         android:src="@drawable/user_count_icon" />
@@ -51,5 +50,5 @@
         android:layout_toEndOf="@+id/people_icon"
         android:text="3"
         android:textColor="@color/white"
-        android:textSize="12sp" />
+        android:textSize="@dimen/font_size_12" />
 </RelativeLayout>
