--- a/SportsSideKick/app/src/main/res/layout/comment_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/comment_item.xml
@@ -2,15 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity=""
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
     <ImageView
         android:layout_gravity="top"
-        android:id="@+id/profil_iamge"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:id="@+id/profile_image"
+        android:layout_width="@dimen/width_60"
+        android:layout_height="@dimen/height_60"
         android:layout_marginStart="@dimen/margin_15"
         android:layout_marginEnd="@dimen/margin_5"
         android:src="@drawable/blank_profile_rounded" />
@@ -26,7 +25,7 @@
             android:textColor="@color/white"
             android:layout_marginTop="@dimen/margin_5"
             android:layout_marginEnd="@dimen/margin_15"
-            android:text="Comment text"
+            android:text="@string/comment_text"
             android:minLines="1"
             android:background="@drawable/chat_bubble"/>
 
@@ -35,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/post_text"
-            android:layout_marginLeft="@dimen/margin_10"
+            android:layout_marginStart="@dimen/margin_10"
             android:layout_marginTop="@dimen/margin_5"
             android:layout_marginBottom="@dimen/margin_5"
             android:text="First name last name - time ago"
