--- a/SportsSideKick/app/src/main/res/layout/dialog_layout.xml
+++ b/SportsSideKick/app/src/main/res/layout/dialog_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="360dp"
+    android:layout_width="@dimen/width_360"
     android:layout_height="wrap_content"
     android:background="@drawable/popup_bottom_background_dark"
     android:clickable="true"
@@ -19,7 +19,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="@dimen/height_2"
         android:layout_alignParentTop="true"
         android:background="@color/colorAccent" />
 
@@ -40,7 +40,7 @@
     <LinearLayout
         android:id="@+id/dialog_button_container"
         android:layout_width="wrap_content"
-        android:layout_height="60dp"
+        android:layout_height="@dimen/height_60"
         android:layout_below="@+id/dialog_content"
         android:layout_centerHorizontal="true">
 
@@ -48,7 +48,6 @@
             android:id="@+id/dialog_cancel_button"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_centerVertical="true"
             android:layout_marginBottom="@dimen/margin_20"
             android:background="@null"
             android:scaleType="centerInside"
@@ -57,8 +56,8 @@
 
         <View
             android:id="@+id/dialog_button_divider"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="@dimen/space_0"
+            android:layout_height="@dimen/space_0"
             android:layout_margin="@dimen/margin_10"
             android:visibility="gone"/>
 
@@ -66,7 +65,6 @@
             android:id="@+id/dialog_ok_button"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_centerVertical="true"
             android:layout_marginBottom="@dimen/margin_20"
             android:background="@null"
             android:scaleType="centerInside"
