--- a/SportsSideKick/app/src/main/res/layout/fragment_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_login.xml
@@ -62,7 +62,7 @@
                     android:id="@+id/login_login_progress_bar"
                     android:layout_width="@dimen/prodgres_bar"
                     android:layout_height="@dimen/prodgres_bar"
-                    android:elevation="2dp"
+                    android:elevation="@dimen/elevation_2"
                     app:indicatorName="LineSpinFadeLoaderIndicator"
                     android:layout_centerInParent="true"
                     android:visibility="gone"/>
@@ -77,7 +77,7 @@
                 android:layout_marginTop="@dimen/margin_5"
                 android:textAlignment="center"
                 android:textColor="@color/lightGrey"
-                android:textSize="12sp"/>
+                android:textSize="@dimen/font_size_12"/>
         </LinearLayout>
 
 
