--- a/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_news_item.xml
@@ -52,7 +52,7 @@
                     <VideoView
                         android:id="@+id/content_video"
                         android:layout_width="match_parent"
-                        android:layout_height="500dp"
+                        android:layout_height="@dimen/height_500"
                         android:visibility="gone" />
                 </RelativeLayout>
 
@@ -73,7 +73,7 @@
                         android:ellipsize="end"
                         android:maxLines="1"
                         android:textColor="@color/white"
-                        android:textSize="22sp"
+                        android:textSize="@dimen/font_size_22"
                         android:textStyle="bold" />
 
                     <TextView
@@ -87,7 +87,7 @@
                         android:ellipsize="end"
                         android:maxLines="2"
                         android:textColor="@color/lightGrey"
-                        android:textSize="16sp" />
+                        android:textSize="@dimen/font_size_16" />
 
                 </RelativeLayout>
 
@@ -112,17 +112,17 @@
 
                     <ImageView
                         android:id="@+id/likes_icon"
-                        android:layout_width="26dp"
-                        android:layout_height="26dp"
-                        android:layout_marginEnd="5dp"
+                        android:layout_width="@dimen/width_26"
+                        android:layout_height="@dimen/height_26"
+                        android:layout_marginEnd="@dimen/margin_5"
                         android:background="@drawable/ic_like"
                         android:backgroundTint="@color/white" />
 
                     <ImageView
                         android:id="@+id/likes_icon_liked"
-                        android:layout_width="26dp"
-                        android:layout_height="26dp"
-                        android:layout_marginEnd="5dp"
+                        android:layout_width="@dimen/width_26"
+                        android:layout_height="@dimen/height_26"
+                        android:layout_marginEnd="@dimen/margin_5"
                         android:background="@drawable/ic_like"
                         android:backgroundTint="@color/colorAccent"
                         android:visibility="gone" />
@@ -146,9 +146,9 @@
 
                     <ImageView
                         android:id="@+id/pin_icon"
-                        android:layout_width="26dp"
-                        android:layout_height="26dp"
-                        android:layout_marginEnd="5dp"
+                        android:layout_width="@dimen/width_26"
+                        android:layout_height="@dimen/height_26"
+                        android:layout_marginEnd="@dimen/margin_5"
                         android:background="@drawable/ic_pin"
                         android:backgroundTint="@color/white" />
 
@@ -171,9 +171,9 @@
 
                     <ImageView
                         android:id="@+id/share_icon"
-                        android:layout_width="26dp"
-                        android:layout_height="26dp"
-                        android:layout_marginEnd="5dp"
+                        android:layout_width="@dimen/width_26"
+                        android:layout_height="@dimen/height_26"
+                        android:layout_marginEnd="@dimen/margin_5"
                         android:background="@drawable/ic_share"
                         android:backgroundTint="@color/white" />
 
@@ -196,9 +196,9 @@
 
                     <ImageView
                         android:id="@+id/comments_icon"
-                        android:layout_width="26dp"
-                        android:layout_height="26dp"
-                        android:layout_marginEnd="5dp"
+                        android:layout_width="@dimen/width_26"
+                        android:layout_height="@dimen/height_26"
+                        android:layout_marginEnd="@dimen/margin_5"
                         android:background="@drawable/ic_comment"
                         android:backgroundTint="@color/white" />
 
@@ -216,7 +216,7 @@
             <View
                 android:id="@+id/top_horizontal_split_line"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
+                android:layout_height="@dimen/height_1"
                 android:layout_below="@id/top_buttons_contaniner"
                 android:background="@color/green_dark_2" />
 
@@ -226,7 +226,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/top_horizontal_split_line"
                 android:layout_margin="@dimen/margin_20"
-                android:textColor="@android:color/white" />
+                android:textColor="@color/white" />
 
             <View
                 android:id="@+id/bottom_horizontal_split_line"
@@ -240,7 +240,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/bottom_horizontal_split_line"
-                android:layout_marginBottom="-20dp"
+                android:layout_marginBottom="@dimen/margin_negative_20"
                 android:orientation="vertical"
                 android:visibility="gone">
 
@@ -252,11 +252,11 @@
                     android:textAlignment="center"
                     android:textAllCaps="true"
                     android:textColor="@color/colorAccent"
-                    android:textSize="18sp" />
+                    android:textSize="@dimen/font_size_18" />
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="@dimen/height_1"
                     android:background="@color/green_dark_2" />
 
                 <TextView
@@ -301,17 +301,17 @@
                     android:gravity="center_horizontal">
 
                     <RelativeLayout
-                        android:layout_width="160dp"
-                        android:layout_height="90dp"
+                        android:layout_width="@dimen/width_160"
+                        android:layout_height="@dimen/height_90"
                         android:layout_below="@+id/coin_image"
-                        android:layout_marginTop="-10dp"
+                        android:layout_marginTop="@dimen/margin_negative_10"
                         android:background="@color/green_dark_2_semitransparent">
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_alignParentBottom="true"
-                            android:layout_margin="10dp"
+                            android:layout_margin="@dimen/margin_10"
                             android:text="@string/tutorial_earn"
                             android:textAlignment="center"
                             android:textColor="@color/white" />
@@ -319,7 +319,7 @@
 
                     <ImageView
                         android:id="@+id/coin_image"
-                        android:layout_width="50dp"
+                        android:layout_width="@dimen/width_50"
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
                         android:layout_marginStart="@dimen/margin_10"
@@ -337,7 +337,7 @@
                 android:visibility="gone"
                 android:animateLayoutChanges="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="35dp"
+                android:layout_marginEnd="@dimen/margin_35"
                 android:layout_below="@+id/header_container"
                 android:background="@drawable/share_bubble"
                 android:layout_centerInParent="true"
@@ -346,8 +346,8 @@
                 <ImageView
                     android:id="@+id/share_facebook"
                     android:layout_alignParentStart="true"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="@dimen/width_35"
+                    android:layout_height="@dimen/height_35"
                     android:layout_marginStart="@dimen/margin_30"
                     android:layout_marginTop="@dimen/margin_10"
                     android:layout_marginBottom="@dimen/margin_10"
@@ -357,8 +357,8 @@
                 <ImageView
                     android:id="@+id/share_twitter"
                     android:layout_toEndOf="@+id/share_facebook"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
+                    android:layout_width="@dimen/width_35"
+                    android:layout_height="@dimen/height_35"
                     android:layout_marginEnd="@dimen/margin_10"
                     android:layout_marginTop="@dimen/margin_10"
                     android:layout_marginBottom="@dimen/margin_10"
@@ -394,13 +394,13 @@
 
         <ImageView
             android:id="@+id/post_post_button"
-            android:layout_width="25dp"
+            android:layout_width="@dimen/width_25"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="@dimen/margin_10"
             android:layout_marginEnd="@dimen/margin_20"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/margin_10"
             android:adjustViewBounds="true"
             android:src="@drawable/btn_send"
             android:tint="@color/white"
