--- a/SportsSideKick/app/src/main/res/layout/fragment_rumours.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_rumours.xml
@@ -9,7 +9,7 @@
         android:layout_width="@dimen/prodgres_bar"
         android:layout_height="@dimen/prodgres_bar"
         android:layout_centerInParent="true"
-        android:elevation="2dp"
+        android:elevation="@dimen/elevation_2"
         android:visibility="gone"
         app:indicatorName="LineSpinFadeLoaderIndicator" />
 
@@ -52,7 +52,7 @@
                         android:textAllCaps="true"
                         android:text="@string/rumours_caption"
                         android:textColor="@color/white"
-                        android:textSize="28sp" />
+                        android:textSize="@dimen/font_size_28" />
 
                 </RelativeLayout>
 
@@ -74,8 +74,8 @@
 
                     <View
                         android:id="@+id/fragment_rumors_divider"
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
+                        android:layout_width="@dimen/space_0"
+                        android:layout_height="@dimen/space_0"
                         android:layout_centerHorizontal="true" />
 
                     <RelativeLayout
@@ -164,7 +164,7 @@
                                 android:padding="@dimen/padding_8"
                                 android:textAllCaps="true"
                                 android:text="@string/rumours_caption"
-                                android:textColor="@android:color/black" />
+                                android:textColor="@color/black" />
                         </com.github.rongi.rotate_layout.layout.RotateLayout>
 
                         <RelativeLayout
@@ -223,7 +223,7 @@
                                 android:padding="@dimen/padding_8"
                                 android:textAllCaps="true"
                                 android:text="@string/rumours_caption"
-                                android:textColor="@android:color/black" />
+                                android:textColor="@color/black" />
                         </com.github.rongi.rotate_layout.layout.RotateLayout>
 
                         <RelativeLayout
@@ -283,7 +283,7 @@
                                 android:padding="@dimen/padding_8"
                                 android:textAllCaps="true"
                                 android:text="@string/rumours_caption"
-                                android:textColor="@android:color/black" />
+                                android:textColor="@color/black" />
                         </com.github.rongi.rotate_layout.layout.RotateLayout>
 
                         <RelativeLayout
