--- a/SportsSideKick/app/src/main/res/layout/fragment_video_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_video_chat.xml
@@ -15,9 +15,9 @@
         <ImageButton
             android:id="@+id/add_users_button"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="@dimen/height_60"
             android:layout_margin="@dimen/margin_15"
-            android:layout_toLeftOf="@+id/toggle_mic_button"
+            android:layout_toStartOf="@+id/toggle_mic_button"
             android:background="@null"
             android:src="@drawable/add_users_button"
             android:text="@string/add_users" />
@@ -27,14 +27,14 @@
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_margin="@dimen/margin_15"
-            android:layout_toLeftOf="@+id/toggle_video_button"
+            android:layout_toStartOf="@+id/toggle_video_button"
             android:background="@null"
             android:src="@drawable/microphone_selector" />
 
         <ImageButton
             android:id="@+id/toggle_video_button"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="@dimen/height_60"
             android:layout_centerHorizontal="true"
             android:layout_margin="@dimen/margin_15"
             android:background="@null"
@@ -43,80 +43,77 @@
         <ImageButton
             android:id="@+id/toggle_camera_button"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="@dimen/height_60"
             android:layout_margin="@dimen/margin_15"
-            android:layout_toRightOf="@+id/toggle_video_button"
+            android:layout_toEndOf="@+id/toggle_video_button"
             android:background="@null"
             android:src="@drawable/flip_camera_button" />
 
         <ImageButton
             android:id="@+id/disconnect_button"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="@dimen/height_60"
             android:layout_margin="@dimen/margin_15"
-            android:layout_toRightOf="@+id/toggle_camera_button"
+            android:layout_toEndOf="@+id/toggle_camera_button"
             android:background="@null"
             android:src="@drawable/hangup_button" />
     </RelativeLayout>
 
     <com.wang.avi.AVLoadingIndicatorView
         android:id="@+id/progress_bar"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="@dimen/width_50"
+        android:layout_height="@dimen/height_50"
         android:layout_centerInParent="true"
-        android:elevation="2dp"
+        android:elevation="@dimen/elevation_2"
         android:visibility="gone"
         app:indicatorName="LineSpinFadeLoaderIndicator" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/active_container"
-        android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_margin="@dimen/margin_20"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottom">
+        android:layout_above="@+id/bottom"
+        android:layout_margin="@dimen/margin_20"
+        android:visibility="gone">
 
         <include
-            layout="@layout/item_video_chat_slot"
             android:id="@+id/slot_2"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            layout="@layout/item_video_chat_slot"
+            android:layout_width="@dimen/space_0"
+            android:layout_height="@dimen/space_0"
             android:background="@color/demo_blue_semitransparent"
             app:layout_constraintBottom_toTopOf="@+id/preview_container"
             app:layout_constraintLeft_toRightOf="@+id/slot_3"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-        </include>
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <include
-            layout="@layout/item_video_chat_slot"
             android:id="@+id/slot_3"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            layout="@layout/item_video_chat_slot"
+            android:layout_width="@dimen/space_0"
+            android:layout_height="@dimen/space_0"
             android:background="@color/demo_green_semitransparent"
             app:layout_constraintBottom_toTopOf="@+id/preview_container"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/slot_2"
-            app:layout_constraintTop_toTopOf="parent">
-        </include>
+            app:layout_constraintTop_toTopOf="parent"/>
 
 
         <include
-            layout="@layout/item_video_chat_slot"
             android:id="@+id/slot_4"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            layout="@layout/item_video_chat_slot"
+            android:layout_width="@dimen/space_0"
+            android:layout_height="@dimen/space_0"
             android:background="@color/demo_yellow_semitransparent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/preview_container"
-            app:layout_constraintTop_toBottomOf="@+id/slot_3">
-        </include>
+            app:layout_constraintTop_toBottomOf="@+id/slot_3"/>
 
         <android.support.constraint.ConstraintLayout
             android:id="@+id/preview_container"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="@dimen/space_0"
+            android:layout_height="@dimen/space_0"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/slot_4"
             app:layout_constraintRight_toRightOf="parent"
@@ -124,12 +121,12 @@
 
             <ImageView
                 android:id="@+id/disabled_video_icon"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:src="@drawable/video_disabled"
-                app:layout_constraintBottom_toTopOf="@+id/preview_user_name_text_view"
-                android:visibility="visible"
+                android:layout_width="@dimen/space_0"
+                android:layout_height="@dimen/space_0"
                 android:layout_centerInParent="true"
+                android:src="@drawable/video_disabled"
+                android:visibility="visible"
+                app:layout_constraintBottom_toTopOf="@+id/preview_user_name_text_view"
                 app:layout_constraintDimensionRatio="4.5"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -137,8 +134,8 @@
 
             <com.twilio.video.VideoView
                 android:id="@+id/preview_video_view"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="@dimen/space_0"
+                android:layout_height="@dimen/space_0"
                 app:layout_constraintBottom_toTopOf="@+id/preview_user_name_text_view"
                 app:layout_constraintDimensionRatio="1.5"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -150,9 +147,9 @@
                 android:id="@+id/preview_user_name_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_margin="@dimen/margin_8"
                 android:textColor="@color/white"
-                android:textSize="12sp"
+                android:textSize="@dimen/font_size_12"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -165,8 +162,7 @@
     <RelativeLayout
         android:id="@+id/inactive_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <ImageView
             android:layout_width="match_parent"
@@ -185,8 +181,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_marginLeft="80dp"
-            android:layout_marginRight="80dp">
+            android:layout_marginLeft="@dimen/margin_80"
+            android:layout_marginRight="@dimen/margin_80">
 
             <ImageView
                 android:id="@+id/logo"
@@ -208,7 +204,7 @@
                 android:text="@string/video_chat_text_1"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="26sp"
+                android:textSize="@dimen/font_size_26"
                 android:textStyle="bold" />
 
             <TextView
@@ -222,7 +218,7 @@
                 android:text="@string/video_chat_text_2"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="14sp" />
+                android:textSize="@dimen/font_size_14" />
 
             <Button
                 android:id="@+id/begin_your_call"
