--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -12,7 +12,7 @@
         android:layout_width="@dimen/prodgres_bar"
         android:layout_height="@dimen/prodgres_bar"
         android:layout_centerInParent="true"
-        android:elevation="2dp"
+        android:elevation="@dimen/elevation_2"
         app:indicatorName="LineSpinFadeLoaderIndicator" />
 
     <com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout
@@ -39,17 +39,17 @@
             android:id="@+id/your_post_container"
             android:layout_width="match_parent"
             android:clickable="true"
-            android:layout_height="60dp"
+            android:layout_height="@dimen/height_60"
             android:visibility="gone"
             android:layout_alignParentStart="true">
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_toLeftOf="@+id/vertical_separator" >
+                android:layout_toStartOf="@+id/vertical_separator" >
                 <ImageView
                     android:id="@+id/uploaded_image"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="@dimen/width_50"
+                    android:layout_height="@dimen/height_50"
                     android:visibility="gone"
                     android:scaleType="centerCrop"
                     android:layout_centerVertical="true"
@@ -59,8 +59,8 @@
                     android:layout_alignParentStart="true"/>
                 <ImageView
                     android:id="@+id/remove_uploaded_photo_button"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
+                    android:layout_width="@dimen/width_20"
+                    android:layout_height="@dimen/height_20"
                     android:visibility="gone"
                     android:layout_alignTop="@+id/uploaded_image"
                     android:src="@drawable/removephotobutton"
@@ -79,20 +79,20 @@
                     android:textColorHint="@color/colorPrimarySemiLight" />
                 <ImageView
                     android:id="@+id/post_post_button"
-                    android:layout_width="60dp"
+                    android:layout_width="@dimen/width_60"
                     android:layout_height="match_parent"
                     android:layout_centerVertical="true"
                     android:src="@drawable/btn_send"
                     android:layout_marginStart="@dimen/margin_10"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
+                    android:layout_marginTop="@dimen/margin_20"
+                    android:layout_marginBottom="@dimen/margin_20"
                     android:tint="@color/colorPrimarySemiLight"
                     android:layout_alignParentEnd="true"
                     android:visibility="visible"/>
             </RelativeLayout>
             <View
                 android:id="@+id/vertical_separator"
-                android:layout_width="2dp"
+                android:layout_width="@dimen/width_2"
                 android:layout_height="match_parent"
                 android:layout_toStartOf="@+id/media_buttons"
                 android:background="@color/light_green_1_semitransparent" />
@@ -106,13 +106,13 @@
                 android:orientation="horizontal">
                 <ImageView
                     android:id="@+id/camera_button"
-                    android:layout_width="40dp"
+                    android:layout_width="@dimen/width_40"
                     android:layout_height="match_parent"
                     android:src="@drawable/chat_button_camera"
                     android:tint="@color/colorPrimarySemiLight" />
                 <ImageView
                     android:id="@+id/image_button"
-                    android:layout_width="40dp"
+                    android:layout_width="@dimen/width_40"
                     android:layout_height="match_parent"
                     android:src="@drawable/chat_button_image"
                     android:tint="@color/colorPrimarySemiLight" />
@@ -123,7 +123,7 @@
         <RelativeLayout
             android:id="@+id/wall_filter_container"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="@dimen/height_60"
             android:clickable="true"
             android:layout_alignParentStart="true"
             android:visibility="gone">
@@ -175,7 +175,7 @@
         <RelativeLayout
             android:id="@+id/search_wall_post"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="@dimen/height_60"
             android:clickable="true"
             android:layout_alignParentStart="true"
             android:visibility="gone">
@@ -198,7 +198,7 @@
     <View
         android:id="@+id/shadow"
         android:layout_width="fill_parent"
-        android:layout_height="3dp"
+        android:layout_height="@dimen/height_3dp"
         android:layout_above="@+id/fragment_wall_bottom_bar"
         android:background="@drawable/top_gradient_drawable">
     </View>
@@ -207,7 +207,7 @@
         android:id="@+id/fragment_wall_bottom_bar"
         android:clickable="true"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="@dimen/height_60"
         android:background="@color/green_dark_2"
         android:gravity="center"
         android:layout_alignParentBottom="true"
