--- a/SportsSideKick/app/src/main/res/layout/fragment_with_web_view.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_with_web_view.xml
@@ -21,7 +21,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="@dimen/height_60"
             android:background="@color/colorPrimary"
             android:orientation="horizontal">
 
@@ -35,7 +35,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:layout_margin="10dp"
+                    android:layout_margin="@dimen/margin_10"
                     android:adjustViewBounds="true"
                     android:src="@drawable/ic_back" />
             </RelativeLayout>
@@ -50,7 +50,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:layout_margin="10dp"
+                    android:layout_margin="@dimen/margin_10"
                     android:adjustViewBounds="true"
                     android:src="@drawable/ic_home"
                     android:visibility="gone" />
@@ -66,7 +66,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:layout_margin="10dp"
+                    android:layout_margin="@dimen/margin_10"
                     android:adjustViewBounds="true"
                     android:src="@drawable/ic_share"
                     android:visibility="gone" />
@@ -82,7 +82,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:layout_margin="10dp"
+                    android:layout_margin="@dimen/margin_10"
                     android:adjustViewBounds="true"
                     android:src="@drawable/ic_forward" />
             </RelativeLayout>
@@ -97,7 +97,7 @@
         android:layout_width="@dimen/prodgres_bar"
         android:layout_height="@dimen/prodgres_bar"
         android:layout_centerInParent="true"
-        android:elevation="2dp"
+        android:elevation="@dimen/elevation_2"
         android:visibility="gone"
         app:indicatorName="LineSpinFadeLoaderIndicator" />
 
