--- a/SportsSideKick/app/src/main/res/layout/friend_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/friend_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="20dp">
+    android:layout_marginBottom="@dimen/margin_20">
 
     <ImageView
         android:id="@+id/avatar"
@@ -20,7 +20,7 @@
         android:visibility="gone"/>
 
     <TextView
-        android:id="@+id/profil_name"
+        android:id="@+id/profile_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
@@ -28,7 +28,7 @@
         android:lines="2"
         android:ellipsize="end"
         android:textColor="@color/white"
-        android:textSize="14sp"
+        android:textSize="@dimen/font_size_14"
         android:textStyle="bold"
         android:layout_below="@id/avatar"
         android:layout_alignParentStart="true" />
