--- a/SportsSideKick/app/src/main/res/layout/friend_request_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/friend_request_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_marginBottom="@dimen/margin_20"
-    android:layout_height="60dp">
+    android:layout_height="@dimen/height_60">
 
     <ImageView
         android:id="@+id/profile_image"
