--- a/SportsSideKick/app/src/main/res/layout/item_video_chat_slot.xml
+++ b/SportsSideKick/app/src/main/res/layout/item_video_chat_slot.xml
@@ -10,7 +10,7 @@
         android:layout_width="@dimen/progress_bar_width"
         android:layout_height="@dimen/progress_bar_height"
         android:layout_centerInParent="true"
-        android:elevation="2dp"
+        android:elevation="@dimen/elevation_2"
         android:visibility="gone"
         app:indicatorName="LineSpinFadeLoaderIndicator"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -21,8 +21,8 @@
 
     <ImageView
         android:id="@+id/disabled_video_icon"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="@dimen/space_0"
+        android:layout_height="@dimen/space_0"
         android:layout_centerInParent="true"
         android:src="@drawable/video_disabled"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -34,10 +34,10 @@
 
     <com.twilio.video.VideoView
         android:id="@+id/video_view"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:visibility="gone"
+        android:layout_width="@dimen/space_0"
+        android:layout_height="@dimen/space_0"
         android:layout_centerInParent="true"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/user_name_text_view"
         app:layout_constraintDimensionRatio="1.5"
@@ -49,10 +49,10 @@
         android:id="@+id/user_name_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_margin="@dimen/margin_8"
         android:text="..."
         android:textColor="@color/white"
-        android:textSize="12sp"
+        android:textSize="@dimen/font_size_12"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
