--- a/SportsSideKick/app/src/main/res/layout/message_item_user.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item_user.xml
@@ -17,16 +17,16 @@
             android:id="@+id/text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Demo content."
+            android:text="@string/demo_content"
             android:textColor="@color/white"
-            android:textSize="11sp" />
+            android:textSize="@dimen/font_size_11" />
 
         <ImageView
             android:id="@+id/content_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:maxHeight="80dp"
+            android:maxHeight="@dimen/height_80"
             android:scaleType="centerInside" />
 
         <ImageView
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:adjustViewBounds="true"
-            android:maxHeight="80dp"
+            android:maxHeight="@dimen/height_80"
             android:scaleType="centerInside"
             android:src="@drawable/play_button_icon" />
 
@@ -51,7 +51,7 @@
         android:alpha="0.5"
         android:text="@string/you"
         android:textColor="@color/white"
-        android:textSize="10sp" />
+        android:textSize="@dimen/font_size_10" />
 
     <TextView
         android:id="@+id/spliter"
@@ -62,7 +62,7 @@
         android:alpha="0.5"
         android:text=" | "
         android:textColor="@color/white"
-        android:textSize="10sp" />
+        android:textSize="@dimen/font_size_10" />
 
     <TextView
         android:id="@+id/timestamp"
@@ -73,6 +73,6 @@
         android:layout_marginEnd="@dimen/margin_15"
         android:alpha="0.5"
         android:textColor="@color/white"
-        android:textSize="10sp" />
+        android:textSize="@dimen/font_size_10" />
 
 </RelativeLayout>
