--- a/SportsSideKick/app/src/main/res/layout/notification_row.xml
+++ b/SportsSideKick/app/src/main/res/layout/notification_row.xml
@@ -29,7 +29,7 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:textColor="@color/white"
-            android:textSize="18sp"
+            android:textSize="@dimen/font_size_18"
             android:textStyle="bold" />
 
         <TextView
