--- a/SportsSideKick/app/src/main/res/layout/popup_login.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_login.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="500dp"
+    android:layout_width="@dimen/width_500"
     android:layout_height="match_parent"
-    android:layout_marginTop="@dimen/margin_60"
-    >
+    android:layout_marginTop="@dimen/margin_60">
 
     <!-- VIEW IN MIDDLE TO SPLIT EASIER -->
     <View
         android:id="@+id/center_split"
-        android:layout_width="1dp"
-        android:layout_height="1dp"
+        android:layout_width="@dimen/width_1"
+        android:layout_height="@dimen/height_1"
         android:layout_centerHorizontal="true" />
 
 
@@ -20,14 +19,14 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
         android:layout_alignParentTop="true"
-        android:orientation="horizontal"
-        android:clickable="true">
+        android:clickable="true"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/login_button"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/space_0"
             android:layout_height="match_parent"
-            android:layout_marginEnd="1dp"
+            android:layout_marginEnd="@dimen/margin_1"
             android:layout_weight="1"
             android:background="@color/colorPrimarySemiLight"
             android:gravity="center"
@@ -36,9 +35,9 @@
 
         <TextView
             android:id="@+id/sign_up_button"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/space_0"
             android:layout_height="match_parent"
-            android:layout_marginEnd="1dp"
+            android:layout_marginEnd="@dimen/margin_1"
             android:layout_weight="1"
             android:background="@color/colorAccentLight"
             android:gravity="center"
@@ -49,20 +48,20 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="@dimen/height_2"
         android:layout_alignParentTop="true"
         android:orientation="horizontal">
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginEnd="1dp"
+            android:layout_height="@dimen/height_2"
+            android:layout_marginEnd="@dimen/margin_1"
             android:layout_weight="1"
             android:background="@color/colorAccent" />
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="2dp"
+            android:layout_height="@dimen/height_2"
             android:layout_weight="1"
             android:background="@color/colorPrimaryLight" />
     </LinearLayout>
@@ -71,7 +70,7 @@
     <View
         android:id="@+id/top_split_line"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/height_1"
         android:layout_below="@+id/top_buttons_container"
         android:background="@android:color/black" />
 
@@ -83,10 +82,10 @@
         android:id="@+id/bottom_buttons_container_login"
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
-        android:layout_alignWithParentIfMissing="true"
-        android:background="@drawable/popup_login_button_background"
-        android:layout_below="@+id/container"
         android:layout_alignParentStart="true"
+        android:layout_alignWithParentIfMissing="true"
+        android:layout_below="@+id/container"
+        android:background="@drawable/popup_login_button_background"
         android:clickable="true">
 
         <TextView
@@ -96,14 +95,14 @@
             android:layout_centerInParent="true"
             android:text="@string/login_login"
             android:textColor="@color/colorPrimary"
-            android:textSize="18sp" />
+            android:textSize="@dimen/font_size_18" />
 
         <com.wang.avi.AVLoadingIndicatorView
             android:id="@+id/login_progress_bar"
             android:layout_width="@dimen/prodgres_bar"
             android:layout_height="@dimen/prodgres_bar"
             android:layout_centerInParent="true"
-            android:elevation="2dp"
+            android:elevation="@dimen/elevation_2"
             android:visibility="gone"
             app:indicatorName="LineSpinFadeLoaderIndicator" />
 
@@ -114,12 +113,12 @@
         android:id="@+id/bottom_buttons_container_reset"
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
-        android:layout_alignWithParentIfMissing="true"
-        android:background="@drawable/popup_login_button_background"
-        android:layout_below="@+id/container"
         android:layout_alignParentStart="true"
-        android:visibility="invisible"
-        android:clickable="true">
+        android:layout_alignWithParentIfMissing="true"
+        android:layout_below="@+id/container"
+        android:background="@drawable/popup_login_button_background"
+        android:clickable="true"
+        android:visibility="invisible">
 
         <TextView
             android:id="@+id/reset_text"
@@ -128,24 +127,24 @@
             android:layout_centerInParent="true"
             android:text="Reset"
             android:textColor="@color/colorPrimary"
-            android:textSize="18sp"
-            android:visibility="visible"/>
+            android:textSize="@dimen/font_size_18"
+            android:visibility="visible" />
 
         <com.wang.avi.AVLoadingIndicatorView
             android:id="@+id/reset_progress_bar"
             android:layout_width="@dimen/prodgres_bar"
             android:layout_height="@dimen/prodgres_bar"
             android:layout_centerInParent="true"
-            android:elevation="2dp"
+            android:elevation="@dimen/elevation_2"
             android:visibility="gone"
             app:indicatorName="LineSpinFadeLoaderIndicator" />
 
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/container"
         android:layout_below="@+id/top_split_line"
         android:background="@color/colorPrimarySemiLight">
 
@@ -155,11 +154,11 @@
             android:id="@+id/content_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimarySemiLight"
-            android:clickable="true"
-            android:animateLayoutChanges="true"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true">
+            android:animateLayoutChanges="true"
+            android:background="@color/colorPrimarySemiLight"
+            android:clickable="true">
 
             <LinearLayout
                 android:layout_width="@dimen/login_conteiner_width"
@@ -175,8 +174,8 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/login_login_email"
                     android:inputType="textEmailAddress"
-                    android:textAlignment="textStart"
-                    android:nextFocusDown="@+id/login_password" />
+                    android:nextFocusDown="@+id/login_password"
+                    android:textAlignment="textStart" />
 
                 <EditText
                     android:id="@+id/login_password"
@@ -205,26 +204,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/content_container"
-            android:background="@color/colorPrimarySemiLight"
-            android:clickable="true"
             android:layout_alignParentTop="true"
             android:animateLayoutChanges="true"
+            android:background="@color/colorPrimarySemiLight"
+            android:clickable="true"
             android:visibility="invisible">
 
             <ImageView
                 android:id="@+id/forgot_password_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_arrow_back"
-                android:padding="@dimen/margin_10"/>
+                android:padding="@dimen/margin_10"
+                android:src="@drawable/ic_arrow_back" />
 
             <RelativeLayout
                 android:layout_width="@dimen/login_conteiner_width"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_marginTop="@dimen/margin_40"
-                android:orientation="vertical"
-                android:clickable="true">
+                android:clickable="true"
+                android:orientation="vertical">
 
                 <EditText
                     android:id="@+id/login_forgot_pass_email"
