--- a/SportsSideKick/app/src/main/res/layout/popup_member_info.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_member_info.xml
@@ -2,10 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="@dimen/popup_friend_request_width"
-    android:layout_height="350dp"
+    android:layout_height="@dimen/height_350"
     android:background="@drawable/popup_bottom_background_dark"
-    android:orientation="vertical"
-    android:clickable="true">
+    android:clickable="true"
+    android:orientation="vertical">
+
     <TextView
         android:id="@+id/caption"
         android:layout_width="match_parent"
@@ -13,15 +14,17 @@
         android:gravity="center"
         android:text="@string/member_info"
         android:textColor="@color/colorAccent" />
+
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="@dimen/height_2"
         android:layout_alignParentTop="true"
         android:background="@color/colorAccent" />
+
     <View
         android:id="@+id/top_split_line"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/height_1"
         android:layout_below="@+id/caption"
         android:background="@android:color/black" />
 
@@ -29,19 +32,19 @@
         android:id="@+id/close"
         android:layout_width="@dimen/popup_friend_request_button_size"
         android:layout_height="@dimen/popup_friend_request_button_size"
-        android:layout_marginEnd="@dimen/margin_10"
-        android:layout_alignParentTop="true"
         android:layout_alignBottom="@+id/top_split_line"
         android:layout_alignParentEnd="true"
-        android:src="@drawable/video_close_button"/>
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="@dimen/margin_10"
+        android:src="@drawable/video_close_button" />
 
     <View
         android:id="@+id/middle_split_line"
         android:layout_width="1dp"
         android:layout_height="match_parent"
         android:layout_above="@+id/bottom_buttons_container"
-        android:layout_centerHorizontal="true"
         android:layout_below="@+id/top_split_line"
+        android:layout_centerHorizontal="true"
         android:background="@android:color/black" />
 
 
@@ -49,19 +52,19 @@
     <RelativeLayout
         android:id="@+id/profile_container"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/middle_split_line"
-        android:layout_height="wrap_content">
+        android:layout_toStartOf="@+id/middle_split_line">
 
         <RelativeLayout
             android:id="@+id/profile_image_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingEnd="@dimen/margin_20"
-            android:paddingStart="@dimen/margin_20"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true">
+            android:layout_centerHorizontal="true"
+            android:paddingEnd="@dimen/margin_20"
+            android:paddingStart="@dimen/margin_20">
 
             <ProgressBar
                 android:id="@+id/progressBar"
@@ -71,8 +74,8 @@
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/circle_shape"
                 android:indeterminate="false"
-                android:max="100"
-                android:progress="65"
+                android:max="@integer/progress_bar_max"
+                android:progress="@integer/progress_bar_60"
                 android:progressDrawable="@drawable/circular_progress_bar" />
 
             <ImageView
@@ -87,12 +90,12 @@
 
 
         <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="@dimen/width_25"
+            android:layout_height="@dimen/height_25"
             android:layout_alignEnd="@id/profile_image_container"
             android:layout_alignStart="@id/profile_image_container"
             android:layout_below="@id/profile_image_container"
-            android:layout_marginTop="-20dp"
+            android:layout_marginTop="@dimen/margin_negative_20"
             android:contentDescription="@string/image"
             android:src="@drawable/next_level_marker" />
 
@@ -103,11 +106,11 @@
             android:layout_alignEnd="@id/profile_image_container"
             android:layout_alignStart="@id/profile_image_container"
             android:layout_below="@id/profile_image_container"
-            android:layout_marginTop="-17dp"
-            android:textSize="10sp"
+            android:layout_marginTop="@dimen/margin_negative_17"
             android:gravity="center"
             android:text="99"
             android:textColor="@color/white"
+            android:textSize="@dimen/font_size_10"
             android:textStyle="normal" />
 
         <TextView
@@ -120,7 +123,7 @@
             android:layout_marginTop="@dimen/margin_8"
             android:gravity="center"
             android:textColor="@color/white"
-            android:textSize="16sp"
+            android:textSize="@dimen/font_size_16"
             android:textStyle="bold" />
 
         <TextView
@@ -132,7 +135,7 @@
             android:layout_below="@id/profile_name"
             android:gravity="center"
             android:textColor="@color/white"
-            android:textSize="10sp"
+            android:textSize="@dimen/font_size_10"
             android:textStyle="normal" />
 
 
@@ -141,47 +144,47 @@
     <Button
         android:id="@+id/chat_button"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:background="@null"
+        android:layout_height="@dimen/height_48"
         android:layout_above="@+id/follow_button"
         android:layout_marginBottom="@dimen/margin_15"
-        android:textColor="@color/white"
         android:layout_marginEnd="@dimen/margin_20"
-        android:drawableLeft="@drawable/friend_chat_button"
-        android:layout_toRightOf="@+id/middle_split_line"
         android:layout_marginStart="@dimen/margin_20"
+        android:layout_toEndOf="@+id/middle_split_line"
+        android:background="@null"
+        android:drawableStart="@drawable/friend_chat_button"
         android:drawablePadding="@dimen/margin_10"
-        android:text ="@string/chat_caption" />
+        android:text="@string/chat_caption"
+        android:textColor="@color/white" />
 
     <Button
         android:id="@+id/follow_button"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:background="@null"
+        android:layout_height="@dimen/height_48"
         android:layout_centerVertical="true"
-        android:textColor="@color/white"
-        android:drawableLeft="@drawable/friend_follow_button"
-        android:layout_toRightOf="@+id/middle_split_line"
         android:layout_marginBottom="@dimen/margin_15"
-        android:layout_marginStart="@dimen/margin_20"
         android:layout_marginEnd="@dimen/margin_20"
-        android:drawablePadding="@dimen/margin_10" />
+        android:layout_marginStart="@dimen/margin_20"
+        android:layout_toEndOf="@+id/middle_split_line"
+        android:background="@null"
+        android:drawableStart="@drawable/friend_follow_button"
+        android:drawablePadding="@dimen/margin_10"
+        android:textColor="@color/white" />
 
 
     <Button
         android:id="@+id/friend_button"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
-        android:background="@null"
-        android:gravity="left|center_vertical"
         android:layout_below="@+id/follow_button"
         android:layout_centerVertical="true"
-        android:textColor="@color/white"
         android:layout_marginEnd="@dimen/margin_20"
-        android:drawableLeft="@drawable/friend_follow_button"
-        android:layout_toRightOf="@+id/middle_split_line"
         android:layout_marginStart="@dimen/margin_20"
-        android:drawablePadding="@dimen/margin_10" />
+        android:layout_toRightOf="@+id/middle_split_line"
+        android:background="@null"
+        android:drawableLeft="@drawable/friend_follow_button"
+        android:drawablePadding="@dimen/margin_10"
+        android:gravity="left|center_vertical"
+        android:textColor="@color/white" />
 
 
     <!-- BOTTOM BUTTONS CONTAINER -->
