--- a/SportsSideKick/app/src/main/res/layout/popup_modal.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_modal.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="360dp"
+    android:layout_width="@dimen/width_360"
     android:layout_height="wrap_content"
     android:background="@drawable/popup_bottom_background_dark"
     android:orientation="vertical"
@@ -17,7 +17,7 @@
         android:textColor="@color/colorAccent" />
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="@dimen/height_2"
         android:layout_alignParentTop="true"
         android:background="@color/colorAccent" />
 
