--- a/SportsSideKick/app/src/main/res/layout/popup_new_call.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_new_call.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="500dp"
-    android:layout_height="500dp"
+    android:layout_width="@dimen/width_500"
+    android:layout_height="@dimen/height_500"
     android:clickable="true">
 
     <!-- TOP BUTTONS CONTAINER -->
@@ -18,17 +18,17 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            android:layout_marginEnd="1dp"
+            android:layout_marginEnd="@dimen/margin_1"
             android:gravity="center_vertical"
             android:text="@string/starting_new_call_search_title"
             android:textColor="@color/colorAccent"
-            android:textSize="18sp" />
+            android:textSize="@dimen/font_size_18" />
     </RelativeLayout>
 
     <!-- TOP LINE -->
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="@dimen/height_2"
         android:layout_alignParentTop="true"
         android:background="@color/colorAccent" />
 
@@ -37,7 +37,7 @@
         android:layout_width="@dimen/prodgres_bar"
         android:layout_height="@dimen/prodgres_bar"
         android:layout_centerInParent="true"
-        android:elevation="2dp"
+        android:elevation="@dimen/elevation_2"
         app:indicatorName="LineSpinFadeLoaderIndicator" />
 
     <!-- FRIENDS  LIST-->
@@ -55,7 +55,7 @@
             android:text="@string/select_friends_to_call"
             android:textColor="@color/white"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="@dimen/margin_10"/>
 
         <tv.sportssidekick.sportssidekick.util.ui.AutofitRecyclerView
             android:id="@+id/friends_recycler_view"
@@ -83,7 +83,7 @@
         <View
             android:id="@+id/bottom_split_line"
             android:layout_width="wrap_content"
-            android:layout_height="1dp"
+            android:layout_height="@dimen/height_1"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
@@ -114,15 +114,15 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/margin_20"
+                android:layout_marginStart="@dimen/margin_20"
                 android:src="@drawable/popup_search_icon" />
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/margin_10"
-                android:layout_toRightOf="@id/search_icon"
+                android:layout_marginStart="@dimen/margin_10"
+                android:layout_toEndOf="@id/search_icon"
                 android:background="@color/green_dark_2"
                 android:hint="@string/starting_new_call_search_hint"
                 android:imeOptions="flagNoExtractUi"
@@ -130,7 +130,7 @@
                 android:maxLines="1"
                 android:textColor="@color/white_semitransparent"
                 android:textColorHint="@color/white_semitransparent"
-                android:textSize="12sp" />
+                android:textSize="@dimen/font_size_12" />
         </RelativeLayout>
 
 
@@ -140,7 +140,7 @@
     <View
         android:id="@+id/top_split_line"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/height_1"
         android:layout_below="@+id/top_buttons_container"
         android:background="@android:color/black" />
 
