--- a/SportsSideKick/app/src/main/res/layout/popup_signup.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_signup.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="500dp"
+    android:layout_width="@dimen/width_500"
     android:layout_marginTop="@dimen/margin_60"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -17,9 +17,9 @@
 
         <TextView
             android:id="@+id/sign_up_login_button"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/space_0"
             android:layout_height="match_parent"
-            android:layout_marginEnd="1dp"
+            android:layout_marginEnd="@dimen/margin_1"
             android:layout_weight="1"
             android:background="@color/colorAccentLight"
             android:gravity="center"
@@ -28,9 +28,9 @@
 
         <TextView
             android:id="@+id/your_wallet_button"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/space_0"
             android:layout_height="match_parent"
-            android:layout_marginEnd="1dp"
+            android:layout_marginEnd="@dimen/margin_1"
             android:layout_weight="1"
             android:background="@color/colorPrimarySemiLight"
             android:gravity="center"
@@ -41,20 +41,20 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="@dimen/height_2"
         android:layout_alignParentTop="true"
         android:orientation="horizontal">
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginEnd="1dp"
+            android:layout_height="@dimen/height_2"
+            android:layout_marginEnd="@dimen/margin_1"
             android:layout_weight="1"
             android:background="@color/colorPrimaryLight" />
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="2dp"
+            android:layout_height="@dimen/height_2"
             android:layout_weight="1"
             android:background="@color/colorAccent" />
     </LinearLayout>
@@ -63,7 +63,7 @@
     <View
         android:id="@+id/top_split_line"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/height_1"
         android:layout_below="@+id/top_buttons_container"
         android:background="@color/colorPrimary" />
 
@@ -87,13 +87,13 @@
             android:layout_centerInParent="true"
             android:text="@string/sign_up_sign_up"
             android:textColor="@color/colorPrimary"
-            android:textSize="18sp" />
+            android:textSize="@dimen/font_size_18" />
 
         <com.wang.avi.AVLoadingIndicatorView
             android:id="@+id/sign_up_progress_bar"
             android:layout_width="@dimen/prodgres_bar"
             android:layout_height="@dimen/prodgres_bar"
-            android:elevation="2dp"
+            android:elevation="@dimen/elevation_2"
             app:indicatorName="LineSpinFadeLoaderIndicator"
             android:layout_centerInParent="true"
             android:visibility="gone"/>
@@ -132,8 +132,8 @@
                 android:layout_marginBottom="@dimen/margin_20">
 
                 <View
-                    android:layout_width="50dp"
-                    android:layout_height="1dp"
+                    android:layout_width="@dimen/width_50"
+                    android:layout_height="@dimen/height_1"
                     android:layout_weight="1"
                     android:background="@color/colorPrimary" />
 
@@ -146,8 +146,8 @@
                     android:textColor="@color/white"/>
 
                 <View
-                    android:layout_width="50dp"
-                    android:layout_height="1dp"
+                    android:layout_width="@dimen/width_50"
+                    android:layout_height="@dimen/height_1"
                     android:layout_weight="1"
                     android:background="@color/colorPrimary" />
 
@@ -208,7 +208,7 @@
                 android:text="@string/sign_up_text"
                 android:textAlignment="center"
                 android:textColor="@color/white_semitransparent"
-                android:textSize="10sp" />
+                android:textSize="@dimen/font_size_10" />
 
         </LinearLayout>
 
