--- a/SportsSideKick/app/src/main/res/layout/popup_you_following.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_you_following.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="500dp"
+    android:layout_width="@dimen/width_500"
     android:layout_height="match_parent"
     android:layout_marginBottom="@dimen/margin_60"
     android:layout_marginEnd="@dimen/margin_90"
@@ -19,7 +19,7 @@
 
         <View
             android:id="@+id/top_vertical_spliter"
-            android:layout_width="0dp"
+            android:layout_width="@dimen/space_0"
             android:layout_height="@dimen/standard_button_height"
             android:layout_centerHorizontal="true" />
 
@@ -44,7 +44,7 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="2dp"
+            android:layout_height="@dimen/height_2"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_toStartOf="@+id/top_vertical_spliter"
@@ -52,7 +52,7 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="2dp"
+            android:layout_height="@dimen/height_2"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_toEndOf="@+id/top_vertical_spliter"
@@ -75,7 +75,7 @@
         android:layout_width="@dimen/prodgres_bar"
         android:layout_height="@dimen/prodgres_bar"
         android:layout_centerInParent="true"
-        android:elevation="2dp"
+        android:elevation="@dimen/elevation_2"
         app:indicatorName="LineSpinFadeLoaderIndicator" />
 
     <!-- FRIENDS  LIST-->
@@ -118,7 +118,7 @@
         <View
             android:id="@+id/bottom_split_line"
             android:layout_width="wrap_content"
-            android:layout_height="1dp"
+            android:layout_height="@dimen/height_1"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
@@ -149,7 +149,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/margin_20"
+                android:layout_marginStart="@dimen/margin_20"
                 android:src="@drawable/popup_search_icon" />
 
             <EditText
@@ -157,8 +157,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/margin_10"
-                android:layout_toRightOf="@id/search_icon"
+                android:layout_marginStart="@dimen/margin_10"
+                android:layout_toEndOf="@id/search_icon"
                 android:background="@color/green_dark_2"
                 android:hint="@string/your_friends_search_hint"
                 android:imeOptions="flagNoExtractUi"
@@ -166,7 +166,7 @@
                 android:maxLines="1"
                 android:textColor="@color/white_semitransparent"
                 android:textColorHint="@color/white_semitransparent"
-                android:textSize="12sp" />
+                android:textSize="@dimen/font_size_12" />
         </RelativeLayout>
 
         <ImageView
@@ -175,7 +175,7 @@
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:layout_margin="@dimen/margin_15"
-            android:layout_toRightOf="@id/search_container"
+            android:layout_toEndOf="@id/search_container"
             android:src="@drawable/add_friend_button" />
 
 
@@ -187,7 +187,7 @@
             android:gravity="center_vertical"
             android:text="@string/follow_more"
             android:textColor="@color/colorPrimaryLight"
-            android:textSize="20sp"
+            android:textSize="@dimen/font_size_20"
             android:textStyle="normal" />
 
     </RelativeLayout>
@@ -196,7 +196,7 @@
     <View
         android:id="@+id/top_split_line"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/height_1"
         android:layout_below="@+id/top_buttons_container"
         android:background="@android:color/black" />
 
