--- a/SportsSideKick/app/src/main/res/layout/popup_your_friends.xml
+++ b/SportsSideKick/app/src/main/res/layout/popup_your_friends.xml
@@ -27,14 +27,13 @@
             android:gravity="center_vertical"
             android:text="@string/your_friends_title"
             android:textColor="@color/colorAccent"
-            android:textSize="18sp" />
+            android:textSize="@dimen/font_size_18" />
 
         <ImageButton
             android:id="@+id/close_dialog_button"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
             android:layout_centerInParent="true"
             android:layout_margin="@dimen/margin_15"
             android:adjustViewBounds="true"
@@ -54,7 +53,7 @@
         android:layout_width="@dimen/prodgres_bar"
         android:layout_height="@dimen/prodgres_bar"
         android:layout_centerInParent="true"
-        android:elevation="2dp"
+        android:elevation="@dimen/elevation_2"
         app:indicatorName="LineSpinFadeLoaderIndicator" />
 
     <!-- FRIENDS  LIST-->
@@ -80,7 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="@string/no_result"
+            android:text="@string/no_results"
             android:visibility="gone"
             android:textColor="@color/white_semitransparent"/>
 
@@ -100,7 +99,7 @@
         <View
             android:id="@+id/bottom_split_line"
             android:layout_width="wrap_content"
-            android:layout_height="1dp"
+            android:layout_height="@dimen/height_1"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
@@ -131,7 +130,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/margin_20"
+                android:layout_marginStart="@dimen/margin_20"
                 android:src="@drawable/popup_search_icon" />
 
             <EditText
@@ -139,8 +138,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/margin_10"
-                android:layout_toRightOf="@id/search_icon"
+                android:layout_marginStart="@dimen/margin_10"
+                android:layout_toEndOf="@id/search_icon"
                 android:background="@color/green_dark_2"
                 android:hint="@string/your_friends_search_hint"
                 android:imeOptions="flagNoExtractUi"
@@ -148,7 +147,7 @@
                 android:maxLines="1"
                 android:textColor="@color/white_semitransparent"
                 android:textColorHint="@color/white_semitransparent"
-                android:textSize="12sp" />
+                android:textSize="@dimen/font_size_12" />
         </RelativeLayout>
 
         <ImageView
@@ -157,7 +156,7 @@
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:layout_margin="@dimen/margin_15"
-            android:layout_toRightOf="@id/search_container"
+            android:layout_toEndOf="@id/search_container"
             android:src="@drawable/add_friend_button" />
 
         <RelativeLayout
@@ -188,7 +187,7 @@
                     android:layout_centerInParent="true"
                     android:text="0"
                     android:textColor="@color/black"
-                    android:textSize="19sp"
+                    android:textSize="@dimen/font_size_19"
                     android:textStyle="bold" />
             </RelativeLayout>
 
@@ -197,12 +196,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/margin_10"
-                android:layout_toRightOf="@id/requests_number"
+                android:layout_marginStart="@dimen/margin_10"
+                android:layout_toEndOf="@id/requests_number"
                 android:gravity="center_vertical"
                 android:text="@string/your_friends_request"
                 android:textColor="@color/colorAccent"
-                android:textSize="20sp"
+                android:textSize="@dimen/font_size_20"
                 android:textStyle="normal" />
         </RelativeLayout>
 
@@ -212,7 +211,7 @@
     <View
         android:id="@+id/top_split_line"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="@dimen/height_1"
         android:layout_below="@+id/top_buttons_container"
         android:background="@android:color/black" />
 
