--- a/SportsSideKick/app/src/main/res/layout/row_rumours.xml
+++ b/SportsSideKick/app/src/main/res/layout/row_rumours.xml
@@ -6,7 +6,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="55dp">
+        android:layout_height="@dimen/height_55">
 
         <TextView
             android:id="@+id/row_rumors_description"
@@ -18,58 +18,37 @@
             android:layout_marginRight="@dimen/margin_15"
             android:ellipsize="end"
             android:maxLines="2"
-            android:text="text"
             android:textColor="@color/white"
-            android:textSize="18sp" />
+            android:textSize="@dimen/font_size_18" />
     </RelativeLayout>
-
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginBottom="@dimen/margin_15"
-        android:layout_marginLeft="@dimen/margin_15"
+        android:layout_marginStart="@dimen/margin_15"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <View
-            android:layout_width="5dp"
-            android:layout_height="1dp"
+            android:layout_width="@dimen/width_5"
+            android:layout_height="@dimen/height_1"
             android:background="@color/light_green_2" />
 
         <TextView
             android:id="@+id/row_rumors_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginLeft="@dimen/margin_5"
+            android:layout_marginStart="@dimen/margin_5"
             android:ellipsize="end"
             android:maxLines="1"
             android:textColor="@color/lightGrey" />
     </LinearLayout>
 
-
-    <!--<TextView-->
-    <!--android:id="@+id/row_rumors_description_info"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_toStartOf="@id/row_rumors_time"-->
-    <!--android:paddingStart="@dimen/half_margin"-->
-    <!--android:paddingEnd="@dimen/half_margin"-->
-    <!--android:paddingTop="@dimen/padding_8"-->
-    <!--android:paddingBottom="@dimen/padding_8"-->
-    <!--android:ellipsize="end"-->
-    <!--android:singleLine="true"-->
-    <!--android:maxLines="1"-->
-    <!--android:maxEms="8"-->
-    <!--android:textColor="@color/colorPrimaryLight"/>-->
-
-
     <View
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_alignParentEnd="true"
+        android:layout_height="@dimen/height_2"
         android:background="@color/green_dark_2" />
 
 </LinearLayout>
