--- a/SportsSideKick/app/src/main/res/layout/row_wall_small_cell_with_progress_bar.xml
+++ b/SportsSideKick/app/src/main/res/layout/row_wall_small_cell_with_progress_bar.xml
@@ -1,115 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:custom="http://schemas.android.com/tools">
+    xmlns:custom="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <RelativeLayout
         android:id="@+id/row_wall_small_cell_with_progress_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:paddingEnd="@dimen/padding_16">
+        android:paddingEnd="@dimen/padding_16"
+        android:paddingStart="@dimen/space_0">
 
         <com.github.rongi.rotate_layout.layout.RotateLayout
             android:id="@+id/row_wall_small_cell_with_progress_headline_container"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            app:angle="90"
-            android:background="@drawable/rumour_headerz"
+            android:layout_alignBottom="@+id/row_wall_small_cell_with_progress_name"
             android:layout_alignParentTop="true"
-            android:layout_alignBottom="@+id/row_wall_small_cell_with_progress_name"> <!-- Specify rotate angle here -->
+            android:background="@drawable/rumour_headerz"
+            app:angle="90"> <!-- Specify rotate angle here -->
 
             <TextView
                 android:id="@+id/row_wall_small_cell_with_progress_headline"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingTop="@dimen/padding_8"
-                android:paddingBottom="12dp"
-                android:paddingStart="@dimen/padding_8"
-                android:paddingEnd="@dimen/padding_8"
-                android:text="RUMOUR"
-                android:gravity="center"
-                android:textColor="@color/colorPrimary"
-                android:singleLine="true"
-                android:ellipsize="end"
-                android:maxLines="1"
                 android:layout_alignBottom="@+id/row_wall_small_cell_with_progress_name"
-                android:layout_alignParentTop="true"/>
+                android:layout_alignParentTop="true"
+                android:ellipsize="end"
+                android:gravity="center"
+                android:maxLines="1"
+                android:paddingBottom="@dimen/padding_12"
+                android:paddingEnd="@dimen/padding_8"
+                android:paddingStart="@dimen/padding_8"
+                android:paddingTop="@dimen/padding_8"
+                android:singleLine="true"
+                android:text="@string/rumour"
+                android:textColor="@color/colorPrimary" />
 
         </com.github.rongi.rotate_layout.layout.RotateLayout>
-            <TextView
-                android:id="@+id/row_wall_small_cell_with_progress_description_headline"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:paddingTop="@dimen/padding_16"
-                android:paddingBottom="@dimen/padding_8"
-                android:paddingStart="@dimen/padding_16"
-                android:paddingEnd="@dimen/padding_8"
-                android:text="Peritus indictio Repressors ortum in velox aetheres!A falsis, gabalium festus calcaria.A falsis, abaculus varius lixa.Ubi est azureus quadra?callide captiss scutum est.Stellas crescere in rusticus divio!Pol, a bene deus.Homo de germanus terror, convertam boreas!Mirabilis poetas ducunt ad messor.Est pius fermium, cesaris.Gratis terror callide talems brabeuta est.Rumors sunt deuss de brevis nuptia.Silva, demolitione, et index.Ecce, exsul!Cantare superbe ducunt ad gratis decor.A falsis, humani generis alter mens.Noster lactea cito consumeres deus est.Peregrinationes absolute ducunt ad salvus deus.Ubi est ferox magister?Lanista tolerares, tanquam camerarius castor.Primus, bassus orexiss velox tractare de castus, nobilis contencio.Rusticus accolas ducunt ad hilotae.Victrixs mori in palatium!Idoleum clemens demissio est.Musas manducare in magnum lutetia!Nunquam fallere demissio.Resistere vix ducunt ad raptus lanista.Est regius orgia, cesaris.Luna, verpa, et nuptia.Pol, a bene aonides, placidus cursus!Tumultumques congregabo in lutetia!Albus naviss ducunt ad sensorem.Hercle, luna dexter!, alter particula!Ferox tabes satis carpseriss cotta est.Pulchritudines observare!Gratis, ferox lamias inciviliter imitari de pius, talis accentor.Cliniass studere, tanquam clemens aonides.Ubi est primus vita?Pol, brevis fermium!Pol, a bene particula, azureus mons!Glutens sunt historias de dexter particula.Ubi est altus bubo?Peritus turpiss ducunt ad solitudo.A falsis, particula fortis calcaria.Eheu, alter ventus!Heu, lamia!Particulas prarere in cirpi!Bassus cedrium recte apertos amor est.Vox fortis nutrix est.Pol, a bene boreas, varius nuclear vexatum iacere!Cur finis mori?Cum historia ire, omnes decores magicae castus, altus mineralises.Magnum, barbatus indexs sed mire visum de azureus, mirabilis cotta."
-                android:textColor="@color/white"
-                android:layout_alignParentTop="true"
-                android:isScrollContainer="false"
-                android:minLines="1"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:layout_toEndOf="@+id/row_wall_small_cell_with_progress_headline_container"
-                android:lineSpacingMultiplier="1.2"
-                android:layout_toStartOf="@+id/row_wall_small_cell_with_progress_progress"/>
+
+        <TextView
+            android:id="@+id/row_wall_small_cell_with_progress_description_headline"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/row_wall_small_cell_with_progress_headline_container"
+            android:layout_toStartOf="@+id/row_wall_small_cell_with_progress_progress"
+            android:ellipsize="end"
+            android:isScrollContainer="false"
+            android:lineSpacingMultiplier="1.2"
+            android:maxLines="1"
+            android:minLines="1"
+            android:paddingBottom="@dimen/padding_8"
+            android:paddingEnd="@dimen/padding_8"
+            android:paddingStart="@dimen/padding_16"
+            android:paddingTop="@dimen/padding_16"
+            android:singleLine="true"
+            android:textColor="@color/white" />
 
 
         <TextView
             android:id="@+id/row_wall_small_cell_with_progress_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:paddingStart="@dimen/padding_16"
-            android:paddingEnd="@dimen/padding_8"
-            android:text="alcaria.A falsis, abaculus varius lixa.Ubi est azureus quadra?callide captiss scutum est.Stellas crescere in rusticus divio!Pol, a bene deus.Homo de germanus terror, convertam boreas!Mirabilis poetas ducunt ad messor.Est pius fermium, cesaris.Gratis terror callide talems brabeuta est.Rumors sunt deuss de brevis nuptia.Silva, demolitione, et index.Ecce, exsul!Cantare superbe ducunt ad gratis decor.A falsis, humani generis alter mens.Noster lactea cito consumeres deus est.Peregrinationes absolute ducunt ad salvus deus.Ubi est ferox magister?Lanista tolerares, tanquam camerarius castor.Primus, bassus orexiss velox tractare de castus, nobilis contencio.Rusticus accolas ducunt ad hilotae.Victrixs mori in palatium!Idoleum clemens demissio est.Musas manducare in magnum lutetia!Nunquam fallere demissio.Resistere vix ducunt ad raptus lanista.Est regius orgia, cesaris.Luna, verpa, et nuptia.Pol, a bene aonides, placidus cursus!Tumultumques congregabo in lutetia!Albus naviss ducunt ad sensorem.Hercle, luna dexter!, alter particula!Ferox tabes satis carpseriss cotta est.Pulchritudines observare!Gratis, ferox lamias inciviliter imitari de pius, talis accentor.Cliniass studere, tanquam clemens aonides.Ubi est primus vita?Pol, brevis fermium!Pol, a bene particula, azureus mons!Glutens sunt historias de dexter particula.Ubi est altus bubo?Peritus turpiss ducunt ad solitudo.A falsis, particula fortis calcaria.Eheu, alter ventus!Heu, lamia!Particulas prarere in cirpi!Bassus cedrium recte apertos amor est.Vox fortis nutrix est.Pol, a bene boreas, varius nuclear vexatum iacere!Cur finis mori?Cum historia ire, omnes decores magicae castus, altus mineralises.Magnum, barbatus indexs sed mire visum de azureus, mirabilis cotta."
-            android:textColor="@color/white"
-            android:isScrollContainer="false"
-            android:minLines="2"
-            android:maxLines="2"
             android:layout_below="@id/row_wall_small_cell_with_progress_description_headline"
             android:layout_toEndOf="@+id/row_wall_small_cell_with_progress_headline_container"
+            android:layout_toStartOf="@+id/row_wall_small_cell_with_progress_progress"
+            android:ellipsize="end"
+            android:isScrollContainer="false"
             android:lineSpacingMultiplier="1.2"
-            android:layout_toStartOf="@+id/row_wall_small_cell_with_progress_progress"/>
+            android:maxLines="2"
+            android:minLines="2"
+            android:paddingEnd="@dimen/padding_8"
+            android:paddingStart="@dimen/padding_16"
+            android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/row_wall_small_cell_with_progress_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:paddingTop="@dimen/padding_8"
-            android:paddingBottom="@dimen/padding_16"
-            android:paddingStart="@dimen/padding_16"
-            android:paddingEnd="@dimen/padding_8"
-            android:text="Bill Smith"
-            android:textColor="@color/lightGrey"
-            android:isScrollContainer="false"
-            android:minLines="1"
-            android:maxLines="1"
-            android:singleLine="true"
             android:layout_below="@id/row_wall_small_cell_with_progress_description"
             android:layout_toEndOf="@+id/row_wall_small_cell_with_progress_headline_container"
+            android:layout_toStartOf="@+id/row_wall_small_cell_with_progress_progress"
+            android:ellipsize="end"
+            android:isScrollContainer="false"
             android:lineSpacingMultiplier="1.2"
-            android:layout_toStartOf="@+id/row_wall_small_cell_with_progress_progress"/>
+            android:maxLines="1"
+            android:minLines="1"
+            android:paddingBottom="@dimen/padding_16"
+            android:paddingEnd="@dimen/padding_8"
+            android:paddingStart="@dimen/padding_16"
+            android:paddingTop="@dimen/padding_8"
+            android:singleLine="true"
+            android:textColor="@color/lightGrey" />
 
         <com.github.lzyzsd.circleprogress.DonutProgress
             android:id="@+id/row_wall_small_cell_with_progress_progress"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            custom:donut_progress="30"
+            android:layout_width="@dimen/width_80"
+            android:layout_height="@dimen/height_80"
             android:layout_alignParentEnd="true"
-            app:donut_max="100"
-            app:donut_unfinished_color="@color/white"
-            app:donut_finished_color="@color/demo_green_semitransparent"
-            app:donut_text_color="@color/white"
             android:layout_centerVertical="true"
+            app:donut_finished_color="@color/demo_green_semitransparent"
             app:donut_finished_stroke_width="4dp"
-            app:donut_unfinished_stroke_width="4dp"/>
+            app:donut_max="@integer/progress_bar_max"
+            app:donut_text_color="@color/white"
+            app:donut_unfinished_color="@color/white"
+            app:donut_unfinished_stroke_width="@dimen/width_4"
+            custom:donut_progress="@integer/progress_bar_30" />
     </RelativeLayout>
 
 
