--- a/SportsSideKick/app/src/main/res/layout/statement_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/statement_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_marginBottom="5dp"
-    android:layout_marginTop="5dp"
+    android:layout_marginBottom="@dimen/margin_5"
+    android:layout_marginTop="@dimen/margin_5"
     android:layout_height="wrap_content">
 <TextView
-    android:layout_width="0dp"
+    android:layout_width="@dimen/space_0"
     android:layout_weight="2"
     android:layout_height="wrap_content"
     android:id="@+id/date"
@@ -14,7 +14,7 @@
     <TextView
         android:id="@+id/line"
         android:layout_weight="3"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/space_0"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
         android:gravity="end"
@@ -22,10 +22,10 @@
     <TextView
         android:id="@+id/value"
         android:layout_weight="1.5"
-        android:layout_width="0dp"
+        android:layout_width="@dimen/space_0"
         android:layout_height="wrap_content"
         android:textColor="@color/colorAccent"
         android:gravity="start"
-        android:layout_marginStart="30dp"
+        android:layout_marginStart="@dimen/margin_30"
         android:text="Some line text"/>
 </LinearLayout>
