--- a/SportsSideKick/app/src/main/res/layout/tv_category_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/tv_category_item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:padding="4dp"
+    android:padding="@dimen/padding_4"
     android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/image"
@@ -19,8 +19,8 @@
             android:layout_below="@+id/image"
             android:bufferType="spannable"
             android:lines="3"
-            android:padding="8dp"
-            android:textSize="11sp"
+            android:padding="@dimen/padding_8"
+            android:textSize="@dimen/font_size_11"
             android:textColor="@color/white"
-            android:text="CAPTION"/>
+            android:text="@string/caption"/>
 </android.support.percent.PercentRelativeLayout>
