--- a/SportsSideKick/app/src/main/res/layout/wall_item_rumour.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_rumour.xml
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:paddingTop="@dimen/padding_8"
-                android:paddingBottom="12dp"
+                android:paddingBottom="@dimen/padding_12"
                 android:paddingStart="@dimen/padding_8"
                 android:paddingEnd="@dimen/padding_8"
                 android:text="@string/rumours_caption"
