--- a/SportsSideKick/app/src/main/res/layout/wall_item_shop_new.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_shop_new.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="230dp">
+    android:layout_height="@dimen/height_230">
 
     <RelativeLayout
         android:id="@+id/image_container"
@@ -12,7 +12,7 @@
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
-            android:layout_height="130dp"
+            android:layout_height="@dimen/height_130"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             android:src="@drawable/news_holder_image"
@@ -57,12 +57,12 @@
 
             <TextView
                 android:id="@+id/shop_text"
-                android:layout_width="55dp"
-                android:layout_height="30dp"
+                android:layout_width="@dimen/width_55"
+                android:layout_height="@dimen/height_30"
                 android:background="@drawable/shop_backgound"
                 android:backgroundTint="@color/colorPrimary"
                 android:gravity="center"
-                android:text="Shop"
+                android:text="@string/shop"
                 android:textColor="@color/white"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentBottom="true"
