--- a/SportsSideKick/app/src/main/res/layout/wall_item_store_new.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_store_new.xml
@@ -24,11 +24,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:paddingBottom="12dp"
+                android:paddingBottom="@dimen/padding_12"
                 android:paddingEnd="@dimen/padding_8"
                 android:paddingStart="@dimen/padding_8"
                 android:paddingTop="@dimen/padding_8"
-                android:text="STORE"
+                android:text="@string/store_big"
                 android:textColor="@color/white" />
         </com.github.rongi.rotate_layout.layout.RotateLayout>
 
@@ -40,7 +40,7 @@
             android:lineSpacingMultiplier="1.2"
             android:minLines="3"
             android:padding="@dimen/padding_16"
-            android:textSize="18sp"
+            android:textSize="@dimen/font_size_18"
             android:textStyle="bold" />
 
         <TextView
@@ -55,7 +55,7 @@
             android:padding="@dimen/padding_16"
             android:text="Store text"
             android:textColor="@color/white"
-            android:textSize="18sp"
+            android:textSize="@dimen/font_size_18"
             android:textStyle="bold" />
 
     </RelativeLayout>
