--- a/SportsSideKick/app/src/main/res/layout/wall_item_tip.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_tip.xml
@@ -24,11 +24,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:paddingBottom="12dp"
+                android:paddingBottom="@dimen/padding_12"
                 android:paddingEnd="@dimen/padding_8"
                 android:paddingStart="@dimen/padding_8"
                 android:paddingTop="@dimen/padding_8"
-                android:text="TIP"
+                android:text="@string/tip"
                 android:textColor="@color/colorPrimary" />
         </com.github.rongi.rotate_layout.layout.RotateLayout>
 
@@ -45,18 +45,18 @@
             android:maxLines="3"
             android:minLines="3"
             android:padding="@dimen/padding_16"
-            android:text="Try to following the official sporting account"
+            android:text="@string/try_to_following_the_official_sporting_account"
             android:textColor="@color/white"
             android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/tip_image"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="@dimen/width_60"
+            android:layout_height="@dimen/height_60"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginStart="@dimen/margin_15"
             android:layout_marginEnd="@dimen/margin_15"
+            android:layout_marginStart="@dimen/margin_15"
             android:src="@drawable/tip_item" />
     </RelativeLayout>
 </RelativeLayout>
