--- a/SportsSideKick/app/src/main/res/layout/wall_item_user_post_new.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_user_post_new.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="240dp"
+    android:layout_height="@dimen/height_240"
     android:background="@color/green_dark_2">
 
     <RelativeLayout
@@ -14,35 +14,35 @@
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="230dp"
-            android:layout_height="120dp"
+            android:layout_width="@dimen/width_230"
+            android:layout_height="@dimen/height_120"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginEnd="@dimen/margin_15"
             android:layout_marginStart="@dimen/margin_15"
             android:layout_marginTop="@dimen/margin_15"
-            android:scaleType="fitStart"
             android:adjustViewBounds="true"
+            android:scaleType="fitStart"
             android:src="@drawable/news_holder_image"
             android:visibility="visible" />
 
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/user_image"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="@dimen/width_60"
+            android:layout_height="@dimen/height_60"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="@dimen/margin_10"
+            android:layout_marginTop="@dimen/margin_10"
             android:src="@drawable/blank_profile_rounded"
             app:civ_border_color="@color/colorPrimaryLight"
-            app:civ_border_width="2dp" />
+            app:civ_border_width="@dimen/width_2" />
 
         <ImageView
             android:id="@+id/play_button"
-            android:layout_width="62dp"
-            android:layout_height="62dp"
+            android:layout_width="@dimen/width_62"
+            android:layout_height="@dimen/height_62"
             android:layout_centerInParent="true"
             android:background="@drawable/ic_post_play" />
 
@@ -55,23 +55,23 @@
         android:layout_above="@+id/user_details"
         android:layout_below="@id/images_container"
         android:layout_marginEnd="@dimen/margin_20"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="@dimen/margin_20"
         android:layout_marginTop="@dimen/margin_10"
         android:ellipsize="end"
         android:maxLines="2"
         android:minLines="2"
         android:text="Post caption"
         android:textColor="@color/white"
-        android:textSize="16sp" />
+        android:textSize="@dimen/font_size_16" />
 
     <RelativeLayout
         android:id="@+id/user_details"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
+        android:layout_height="@dimen/height_20"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/margin_5"
         android:layout_marginEnd="@dimen/margin_10"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="@dimen/margin_10"
         android:layout_marginTop="@dimen/margin_10">
 
         <LinearLayout
@@ -84,9 +84,9 @@
 
             <ImageView
                 android:id="@+id/comments_icon"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginEnd="2dp"
+                android:layout_width="@dimen/width_20"
+                android:layout_height="@dimen/height_20"
+                android:layout_marginEnd="@dimen/margin_2"
                 android:background="@drawable/ic_comment"
                 android:backgroundTint="@color/lightGrey" />
 
@@ -96,7 +96,7 @@
                 android:layout_height="wrap_content"
                 android:text="204"
                 android:textColor="@color/lightGrey"
-                android:textSize="10sp" />
+                android:textSize="@dimen/font_size_10" />
 
         </LinearLayout>
 
@@ -115,17 +115,17 @@
 
                 <ImageView
                     android:id="@+id/likes_icon"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_marginEnd="2dp"
+                    android:layout_width="@dimen/width_20"
+                    android:layout_height="@dimen/height_20"
+                    android:layout_marginEnd="@dimen/margin_2"
                     android:background="@drawable/ic_like"
                     android:backgroundTint="@color/lightGrey" />
 
                 <ImageView
                     android:id="@+id/liked_icon"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_marginEnd="2dp"
+                    android:layout_width="@dimen/width_20"
+                    android:layout_height="@dimen/height_20"
+                    android:layout_marginEnd="@dimen/margin_2"
                     android:background="@drawable/ic_like"
                     android:backgroundTint="@color/colorAccent"
                     android:visibility="gone" />
@@ -137,7 +137,7 @@
                 android:layout_height="wrap_content"
                 android:text="6901"
                 android:textColor="@color/lightGrey"
-                android:textSize="10sp" />
+                android:textSize="@dimen/font_size_10" />
         </LinearLayout>
 
         <TextView
@@ -148,7 +148,7 @@
             android:maxLines="1"
             android:text="Christopher Ogden"
             android:textColor="@color/lightGrey"
-            android:textSize="10sp" />
+            android:textSize="@dimen/font_size_10" />
     </RelativeLayout>
 
 
